# English-Speaking-Agent

./: .coverage  .dockerignore  .env.example  .env.prod.example  .gitignore  .gitlab-ci.yml  AGENTS.md  AI_LinguAI_spec.md  API.md  Dockerfile  Dockerfile.frontend  JOURNAL.md  README.md  WORKLOG.md  current problems.md  data_stream_elasticsearch.json  docker-compose.yaml  entrypoint.sh  main.py  mornitoring.md  package-lock.json  pyproject.toml  requirements-test.txt  requirements.txt  vek-stack.md
.ai-log/: session.jsonl
.claude/: settings.json
.codex/: hooks.json
.cursor/: hooks.json
.gemini/: settings.json
.github/hooks/: hooks.json
.github/workflows/: sync_to_gitlab.yml  test.yml
.qwen/: hooks.json
app/: main.py
app/agents/: __init__.py  output_models.py  pipeline.py  state.py  tool_steps.py
app/api/: _audio.py  _validators.py  assess.py  audio.py  auth.py  chat.py  conversations.py  flashcards.py  grammar.py  oauth.py  router.py  routes.py  schemas.py  topics.py
app/core/: ai_services.py  database.py  logger.py  logging_middleware.py  metrics.py  security.py  settings.py  storage.py  telemetry.py
app/guardrails/: __init__.py  exceptions.py
app/prompts/: __init__.py  blocked_response.md  grammar_instruction.md  preflight_prompt.md  prompt_architecture.json  prompt_builder.py  system_prompt.md  test_prompt.ipynb  topic_prompts.md
app/services/: azure_assessment.py  elevenlabs_tts.py  email_service.py  flashcard_service.py  grammar_parser.py  groq_llm.py  groq_stt.py
backend/: ai_services.py  auth_api.py  config.py  database.py  routes.py  schemas.py  security.py  storage.py
db_schema/: flashcard_schema.sql  grammar_feedback.sql  password_reset_tokens.sql  reset.sql  schema.sql  seed.sql
deployments/: ingress.yaml
deployments/backend/: deploy.yaml  prompts-configmap.yaml
deployments/elasticsearch/: index-template.json
deployments/frontend/: deploy.yaml
deployments/grafana/: dashboard-configmap.yaml  deploy.yaml
deployments/minio/: minio.yaml
deployments/prometheus/: deploy.yaml  prometheus.yml
deployments/redis/: redis.yaml
deployments/vector/: deploy.yaml  vector.yaml
docs/demo/: LinguAI_pitch.html  index.html  video_demo_script.md
document/: API.md  Backend_Test_Suite_Documentation.md  ai_speaking_coach_technical_product_spec.md  system_prompt_design.md
evaluation/: dataset.json  failures.json  hardest_cases.json  metrics.json  results.json  run_evaluation.py
frontend/: .eslintrc.cjs  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: backdate_commits.sh  publish.sh  setup_hooks.sh  submit_log.py
src/: agent.py  config.py  db.py  main.py  schemas.py  security.py  services.py  tools.py
tests/: Backend_Test_Suite_Documentation.md  conftest.py  test_api.py
(+310 files in other folders)
