[project]
name = "a20-app-014"
version = "0.1.0"
description = "AI Speaking Coach – IELTS Speaking Assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bcrypt>=5.0.0",
    "cryptography>=47.0.0",
    "fastapi>=0.136.1",
    "groq>=1.2.0",
    "httpx>=0.28.1",
    "minio>=7.2.20",
    "passlib>=1.7.4",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.3",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "redis>=7.4.0",
    "requests>=2.31.0",
    "uvicorn>=0.46.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = ["_tmp", "pytest_temp_work", ".pytest_tmp", ".pytest_temp_work"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--no-header",
    "--basetemp=pytest_temp_work",
    "-p",
    "no:cacheprovider",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::jwt.warnings.RemovedInPyjwt3Warning",
    "ignore:.*InsecureKeyLengthWarning.*:Warning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
    "integration: marks tests as integration tests (require real services)",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "app/core/logger.py",
    "app/main.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[dependency-groups]
dev = [
    "fakeredis>=2.35.1",
    "pytest>=9.0.3",
]
